# statline

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
benches/: profile_bench.rs
examples/: Employee.csv
scripts/: build.sh  install.sh
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/io/: mod.rs
src/output/: mod.rs
src/profiler/: corr.rs  insights.rs  mod.rs  profile.rs  types.rs  utils.rs
src/visualization/: categorical.rs  correlation.rs  export.rs  histogram.rs  missing.rs  mod.rs  types.rs  utils.rs
src/visualization/terminal/: bars.rs  categorical.rs  histogram.rs  mod.rs  sparkline.rs  utils.rs
