[package]
name = "statline"
version = "0.1.0"
edition = "2021"
description = "Fast headless CLI utility for exploratory data analysis on CSV and Parquet datasets"
license = "Apache-2.0"
repository = "https://github.com/a6ir/statline"
readme = "README.md"
keywords = ["cli", "eda", "polars", "csv", "parquet"]
categories = ["command-line-utilities", "data-structures"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
polars = { version = "0.46", default-features = false, features = [
    "lazy", "csv", "parquet", "fmt", "strings", "regex", "moment"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "profile_bench"
harness = false
